fix(style) invitation text align

--- a/src/components/main-page/main-page.component.scss
+++ b/src/components/main-page/main-page.component.scss
@@ -169,8 +169,9 @@ $white: #fff;
     .timeline {
       list-style: none;
       padding: 0;
-      width: 100%;
+      width: 50%;
       max-width: 400px;
+      text-align: left;
 
       li {
         padding: 8px 0;
